#pragma once

#include <string>
#include <memory>
#include "SceneManager.h"
#include "WorldState.h"
#include "data/dataLoader.h"

// 负责控制游戏初始化以及指令处理
class Game {
public:
    Game();

    void run();
    void gameCommand(const std::string& command);

    // 游戏是否仍在运行（结局/退出后为 false，供地图循环判断是否结束）
    bool isRunning() const { return running; }

    // 玩家
    Combatant& getPlayer();

    // 同伴（钟离昧等，可能为空）
    Combatant* getCompanion();

    // 战斗结束后恢复同伴满状态（解决同伴阵亡后无法战斗外复活的问题）
    void restoreCompanion();

    // 药店需要
    ItemPool& getItemPool();
    int& getGold();


    GameData& getGameData();

    // 地图持久状态（当前地图 / 玩家坐标 / 已清除格子）
    WorldState& getWorld();

    // 存档 / 读档（slot 1~2，供命令层与地图场景调用）
    void doSave(int slot);
    void doLoad(int slot);

    // 存读档界面（清屏显示槽位与信息，单键操作；返回 true 表示发生了读档）
    bool saveMenu();

    // 结局结算（通关 / 败亡）
    void showVictoryEnding();
    void showDefeatEnding();


private:
    bool running = true;

    void initialize();
    void gameLoop();

    void showWelcome();
    void showHelp();

    bool slotMenu(int slot);

    int scene_id = 0;

    // 全局游戏数据
    GameData gameData;

    // 当前玩家
    std::unique_ptr<Combatant> player;

    // 同伴（随队出战，读档时可能为空）
    std::unique_ptr<Combatant> companion;

    // 当前金币
    int gold = 100;

    // 地图持久状态（跨传送门/读档保留敌人、道具、坐标）
    WorldState world;

    SceneManager sceneManager;
};